--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".signUp" />
         <activity android:name=".customerLogIn" />
+        <activity android:name=".MainActivity" />
         <activity
             android:name=".splash"
             android:label="@string/app_name"
